# fortios-syslog

./: .gitignore  CHANGELOG.md  README.md  cabal.project  fortios-syslog.cabal
bench/: Main.hs
common/: Sample.hs
scripts/: Generate.hs  validate.hs
src/Fortios/: Generated.hs  Hash.hs  Syslog.hs
src/Fortios/Syslog/: Unsafe.hs
test/: Main.hs
